chore: align configuration and improve code quality
- Configuration consistency: unified standard configuration prefix
- Lifecycle management: adopt event-driven initialization mechanism
- Code quality: remove redundant comments and normalize file formatting